syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.fixture";
//option go_package = "fixture";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package model;

service FixtureService {
    rpc GetMatches (google.protobuf.Empty) returns (Matches) {}
    rpc GetTeamForm (google.protobuf.Empty) returns (Forms) {}
}

message Matches {
    repeated Match matches = 1;
}

message Match {
    string id = 1;
    string hTeam = 2;
    string aTeam = 3;
    int32 hGoals = 4;
    int32 aGoals = 5;
    int32 played = 6;
    google.protobuf.Timestamp dateTime = 7;
    int32 matchday = 8;
}

message Forms {
    map<string, TeamForm> teams = 1;
}

message TeamForm {
    repeated TeamMatchResult forms = 1;
}

message TeamMatchResult {
    enum Result {
        WIN = 0;
        DRAW = 1;
        LOSS = 2;
    }
    enum Location {
        HOME = 0;
        AWAY = 1;
    }
    Result result = 1;
    string score = 2;
    string opponent = 3;
    Location location = 4;
}